# caker

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yaml  pyproject.toml  system_prompt.md
dev/apps/parlant/: .env.example  .gitignore  CHANGELOG_migration.md  GOVERNANCE.md  README.md  main.py  pyproject.toml
dev/apps/parlant/app/: __init__.py  artifacts.py  bootstrap.py  config.py  log_paths.py  nlp.py  profile.py  server.py
dev/apps/parlant/artifacts/: canned_responses.json  glossary.json  governance_baseline.json  manifest.json  relationships.json  schema_contract.json  scope_map.json  variables.json
dev/apps/parlant/config/: policy.env
dev/apps/parlant/data_pipeline/: __init__.py  audit.py  audit_extended.py  canned.py  cli.py  embed.py  env.py  fingerprint.py  glossary_build.py  hash_utils.py  ids.py  index_build.py  journey_governance.py  manifest.py  migrate.py  normalize.py  relationships.py  retriever_corpus.py  scenario_expectations.py  schema.py  scope.py  tool_guidelines.py  variables.py
dev/apps/parlant/evals/: golden_cases.jsonl  run_eval.py
dev/apps/parlant/scripts/: build_batch_governance_summary.py  build_sim_summary.py  customer_sim_20.sh  customer_sim_all_scenarios.sh  customer_sim_multiscenario.py  ensure_var_layout.py  print_manifest_fingerprint.py  restart_gateway.sh  run_all_15_scenarios.sh  run_gateway.sh  run_pipeline.sh  sync_broker_data.py
dev/apps/parlant/tests/: test_always_on_force.py  test_audit.py  test_customer_voice.py  test_decoupling.py  test_governance.py  test_matching.py  test_pipeline_link.py  (+6 more)
(+243 files in other folders)
