[project]
name = "caker"
version = "0.1.0"
description = "Mini Agent Skills runtime scaffold (per docs/agent_skills_build_guide.md)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-openai>=0.2.0",
    "asyncpg>=0.30.0",
    "boto3>=1.35.0",
    "chromadb>=0.5.0",
    "aiosqlite>=0.20",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
